# dashbord-masi-hybrid-forecasting-01

./: .env.example  .gitignore  INSTALL.md  PROJECT_OVERVIEW.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
app/: README.md  __init__.py  main.py
app/api/routes/: backtest.py  chat.py  (+5 more)
app/chatbot/: fallback.py  guardrails.py  llm_client.py  service.py
app/core/: config.py  paths.py
app/rag/: build_index.py  intent_router.py  retriever.py
app/schemas/: chat.py
app/services/: backtest_service.py  data_loader.py  forecast_service.py  horizon_service.py  prediction_service.py  risk_service.py
docs/: api.md  architecture.md  index.md  install.md  installation.md  overview.md  rag.md  screenshots.md
frontend/: .env.local.example  README.md  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
rag_project/: README.md  __init__.py
rag_project/chatbot/: answer_repair.py  conversation_memory.py  fallback_responses.py  intent_router.py  prompt_builder.py  response_guardrails.py  response_policy.py  routed_context.py  service.py
rag_project/core/: config.py  paths.py
rag_project/docs/: 01_overview.md  02_methodology.md  03_glossary.md  04_limitations.md  05_dashboard_playbook.md  06_common_questions.md  07_operating_contract.md  08_interpretation_rules.md
rag_project/llm/: ollama_client.py
rag_project/rag/: build_index.py  notebook_parser.py  retriever.py
rag_project/scripts/: build_index.py  test_chat.py
scripts/: README.md  build_rag_index.py  run_dev.ps1  run_dev.sh
(+16 files in other folders)
